~~~~~~~~~~~~~~~~~~~~~~
version 1.8
~~~~~~~~~~~~~~~~~~~~~~

* fixed setup.py for backwards compatiblity for python2/3
* fixed issue that would cause restart_artillery to kill itself and not restart
* fixed an issue that would cause ssh to pull more logs then needed and not to ssh banning
* fixed an issue that would cause intelligence to still download if source feeds were on

~~~~~~~~~~~~~~~~~~~~~~
version 1.7
~~~~~~~~~~~~~~~~~~~~~~

* converstion to Python3 and adding support for python3
* misc fixes for backwards compatibility for python2/3
* added fix for 0.x.x.x subnets sitll being added under sort

~~~~~~~~~~~~~~~~~~~~~~
version 1.6.1
~~~~~~~~~~~~~~~~~~~~~~

* put everything into pep8 format
* added password auth check thanks to benichmt1 git pull request

~~~~~~~~~~~~~~~~~~~~~~
version 1.6
~~~~~~~~~~~~~~~~~~~~~~

* fixed issue where 0.x.x.x could show up on banlist
* added OTX reputation IP lists to Artillery
* sped up artillery boot time significantly when ban is turned off
* sped up time for URL feeds and put them into one central function
* greatly increased time for threat intelligence feed pulls and removed old intelligence update function and centralized into source feeds with appropriate checks
* added sort IP after pulling in external source feeds and ATIF
* cleaned up old codebase

~~~~~~~~~~~~~~~~~~~~~~
version 1.5.1
~~~~~~~~~~~~~~~~~~~~~~

* fixed old git repo to new git repo at binarydefense

~~~~~~~~~~~~~~~~~~~~~~
version 1.5
~~~~~~~~~~~~~~~~~~~~~~

* disabled yaml config as this breaks configuration reading
* added better handling and ipv4 checking for remote feeds
* changed threat feed to pull every 1 hour instead of 24 hours
* fixed sort issue and malformed IP addresses due to sort not checking properly

~~~~~~~~~~~~~~~~~~~~~~
version 1.4.1
~~~~~~~~~~~~~~~~~~~~~~

* added a new function for sorting IP addresses when adding to the banlist, when an IP address is added, it will sort the text file banlist after an append action