@@ -85,8 +85,10 @@ def listen_server(port, bind_interface):
             server = SocketServer.ThreadingTCPServer(
                 ('%s' % bind_interface, port), SocketListener)
         if honeypot_autoaccept:
-            subprocess.Popen(
-                "iptables -A ARTILLERY -p tcp --dport %s  -j ACCEPT" % port, shell=True).wait()
+            ban_check = read_config("HONEYPOT_BAN").lower()
+            if ban_check == "on":
+                subprocess.Popen(
+                    "iptables -A ARTILLERY -p tcp --dport %s  -j ACCEPT" % port, shell=True).wait()
         server.serve_forever()
     # if theres already something listening on this port
     except Exception:
