@@ -6,6 +6,9 @@ version 1.8
 * fixed issue that would cause restart_artillery to kill itself and not restart
 * fixed an issue that would cause ssh to pull more logs then needed and not to ssh banning
 * fixed an issue that would cause intelligence to still download if source feeds were on
+* turned anti-dos to off by default
+* fixed iptables trying to start when honeypot_ban was off
+* fixed email from not loading modules properly due to python2to3 compatibility
 
 ~~~~~~~~~~~~~~~~~~~~~~
 version 1.7
